--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_sporty">Sporty</string>
     <string name="title_activity_ubrania">Ubrania</string>
     <string name="title_activity_test">Test</string>
+    <string name="title_activity_wypoczynek">Wypoczynek</string>
 
 </resources>
